#######################################################################
## Makefile.am for xAlien FS plugin
##
##
## Version info: $Id: Makefile.am,v 1.5 2006/07/24 07:38:57 apeters Exp $
## Checked in by $Author: apeters $
#######################################################################


SUBDIRS	= CODEC ShmAuth cwccrypt 

INCLUDES = -I$(XROOTD_LOCATION)/include/xrootd -I$(ALIEN_LOCATION) -O -pg -g 

